# mix

./: Cargo.toml  README.md
autotools_wrap/: Cargo.toml
autotools_wrap/src/: lib.rs
bimap/: Cargo.toml
bimap/src/: lib.rs
cmake_wrap/: Cargo.toml
cmake_wrap/src/: lib.rs
collections/: Cargo.toml
collections/src/: btree_map.rs  btree_map_map.rs  btree_set.rs  btree_set_map.rs  btree_vec_map.rs  hash_map.rs  hash_map_map.rs  hash_set.rs  hash_set_map.rs  hash_vec_map.rs  lib.rs  vec.rs
crates/atom/: Cargo.toml
crates/atom/src/: atom.rs  error.rs  lib.rs  requirement.rs  serde.rs
crates/config/: Cargo.toml
crates/config/src/: compiler.rs  configs.rs  lib.rs  settings.rs
crates/env/: Cargo.toml
crates/env/src/: autotools.rs  lib.rs
crates/group/: Cargo.toml
crates/group/src/: lib.rs
crates/id/: Cargo.toml
crates/id/src/: error.rs  lib.rs  package_id.rs  repository_id.rs  serde.rs  util.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs  main.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: group.rs  id.rs  lib.rs  package.rs  package_id.rs  repository_id.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs  shell.rs  theme.rs
crates/source/: Cargo.toml
crates/source/src/: error.rs  github.rs  gitlab.rs  lib.rs  serde.rs  sources.rs  versions.rs
crates/source/src/sources/: iter.rs  paths.rs
crates/source/src/versions/: entry.rs  iter.rs  matches.rs
crates/sync/: Cargo.toml
crates/sync/src/: compiler.rs  lib.rs
crates/triple/: Cargo.toml
crates/triple/src/: arch.rs  env.rs  lib.rs  sys.rs
crates/version/: Cargo.toml
crates/version/src/: error.rs  lib.rs  serde.rs  versions.rs
crates/version/src/versions/: iter.rs  matches.rs  pairs.rs  paths.rs
graph/: Cargo.toml
graph/src/: display.rs  lib.rs  opaque.rs
meson_wrap/: Cargo.toml
meson_wrap/src/: lib.rs
mix/: Cargo.toml
mix/src/: main.rs  options.rs  partial.rs  shell.rs
mix/src/atom/: parser.rs
mix/src/ops/: install.rs
mix/src/ops/install/: build.rs
mix/src/package/: display.rs
mix/src/source/: github.rs
mix/src/version/: lexer.rs  parser.rs
mixer/: Cargo.toml
mixer/src/: config.rs  external.rs  main.rs  ops.rs  shell.rs
mixer/src/atom/: parser.rs
mixer/src/config/: client.rs
mixer/src/ops/: install.rs
mixer/src/ops/install/: build.rs
mixer/src/source/: gitlab.rs  lexer.rs
mixer/src/version/: parser.rs
shell/: Cargo.toml
shell/src/: lexer.rs  main.rs
src/: action.rs  args.rs  atom.rs  autotools.rs  build.rs  client.rs  config.rs  delete_on_drop.rs  external.rs  fetch.rs  git.rs  github.rs  global.rs  main.rs  ops.rs  options.rs  package.rs  shell.rs  source.rs  spec.rs  triple.rs  util.rs  version.rs  watson.rs  wrap.rs
src/action/: depends.rs  deps.rs  fetch.rs  sync.rs
src/atom/: lexer.rs  parser.rs
src/config/: builder.rs  client.rs
src/fetch/: client.rs  github.rs
src/ops/: depend.rs  install.rs  sync.rs
src/ops/install/: build.rs
src/options/: add.rs  build.rs  env.rs  list.rs  remove.rs  sync.rs
src/package/: display.rs  group_id.rs  metadata.rs  node.rs  package_id.rs  symbols.rs
src/source/: github.rs  gitlab.rs  parser.rs
src/version/: lexer.rs  parser.rs
src/wrap/: autotools.rs
src/wrap/autotools/: error.rs
vfs/: Cargo.toml
vfs/src/: lib.rs
