[package]
name    = "mix"
version = "0.0.0"
edition = "2021"

[dependencies.clap]
features = ["wrap_help"]
version = "3.0.0-beta"

[dependencies.futures-util]
version = "0.3"

[dependencies.command_extra]
git = "https://gitdab.com/undefined/command_extra"

[dependencies.path]
git = "https://gitdab.com/undefined/path"

[dependencies.milk_atom]
path = "crates/atom"

[dependencies.milk_build]
path = "crates/build"

[dependencies.milk_config]
path = "crates/config"

[dependencies.milk_env]
path = "crates/env"

[dependencies.milk_id]
path = "crates/id"

[dependencies.milk_manifest]
path = "crates/manifest"

[dependencies.milk_packages]
path = "crates/packages"

[dependencies.milk_shell]
path = "crates/shell"

[dependencies.milk_triple]
path = "crates/triple"

[dependencies.semver]
version = "1.0"

[dependencies.tokio]
features = ["io-util", "process", "macros", "rt", "sync"]
version = "1.12"

[dependencies.yansi]
version = "0.5" 

[workspace]
members = ["crates/*"]
