[package]
name    = "mix"
version = "0.0.0"
edition = "2021"

[dependencies.clap]
features = ["derive", "wrap_help"]
version = "3.0.0-beta"

[dependencies.futures-util]
version = "0.3"

[dependencies.command_extra]
git = "https://gitdab.com/undefined/command_extra"

[dependencies.path]
git = "https://gitdab.com/undefined/path"

[dependencies.mix_atom]
path = "crates/atom"

[dependencies.mix_build]
path = "crates/build"

[dependencies.mix_config]
path = "crates/config"

[dependencies.mix_env]
path = "crates/env"

[dependencies.mix_id]
path = "crates/id"

[dependencies.mix_manifest]
path = "crates/manifest"

[dependencies.mix_packages]
path = "crates/packages"

[dependencies.mix_sync]
path = "crates/sync"

[dependencies.mix_shell]
path = "crates/shell"

[dependencies.mix_triple]
path = "crates/triple"

[dependencies.tokio]
features = ["io-util", "process", "macros", "rt", "sync"]
version = "1.12"

[workspace]
members = ["crates/*"]
