[package]
name    = "collections"
version = "0.0.0"
edition = "2018"

[dependencies]

[features]
default = []

# base
btree-map = []
btree-set = []
hash-map = []
hash-set = []
vec = []

# vec
btree-vec-map = ["btree-map", "vec"]
hash-vec-map  = ["hash-map", "vec"]

# btree btree
btree-set-map = ["btree-map", "btree-set"]
btree-map-map = ["btree-map"]

# btree hash
btree-hash-map-map = ["btree-map", "hash-map"]
btree-hash-set-map = ["btree-map", "hash-set"]

# hash hash
hash-set-map = ["hash-map", "hash-set"]
hash-map-map = ["hash-map"]

# hash btree
hash-btree-map-map = ["btree-map", "hash-map"]
hash-btree-set-map = ["btree-set", "hash-map"]
