[package]
name    = "mix"
version = "0.0.0"
edition = "2018"

[dependencies]
better-panic  = "*"
bytes         = "*"
byte-unit     = "*"
crossterm     = "*"
futures       = "*"
pico-args     = { version = "*", features = ["eq-separator", "short-space-opt"] }
reqwest       = { version = "*", features = ["brotli", "gzip", "json", "rustls-tls", "stream"], default-features = false }
semver        = { version = "*", features = ["serde"] }
serde         = { version = "*", features = ["derive"] }
serde_json    = "*"
serde_yaml    = "*"
strip-ansi-escapes = { version = "*" }
tokio         = { version = "*", features = ["full"] }
tokio-stream  = { version = "*", features = ["fs"] }
ufmt          = { features = ["std"], path = "../../ufmt" }
url           = { version = "*", features = ["serde"] }

#graph = { path = "../graph" }
autotools_wrap = { path = "../autotools_wrap" }
cmake_wrap = { path = "../cmake_wrap" }
meson_wrap = { path = "../meson_wrap" }
