[package]
name    = "mixer"
version = "0.0.0"
edition = "2018"

[dependencies]
bytes         = "1.0"
byte-unit     = "4.0"
crossterm     = "0.19"
futures       = "0.3"
pico-args     = { version = "0.4", features = ["eq-separator", "short-space-opt"] }
reqwest       = { version = "0.11", features = ["brotli", "gzip", "json", "rustls-tls", "stream"], default-features = false }
semver        = { version = "0.11", features = ["serde"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
serde_yaml    = "0.8"
strip-ansi-escapes = { version = "0.1" }
tokio         = { version = "1.6", features = ["full"] }
tokio-stream  = { version = "0.1", features = ["fs"] }
ufmt          = { features = ["std"], git = "https://github.com/saraph/ufmt" }
url           = { version = "2.2", features = ["serde"] }
