[package]
name    = "mix_config"
version = "0.0.0"
edition = "2021"

[dependencies.futures-util]
version = "0.3"

[dependencies.command_extra]
git = "https://gitdab.com/undefined/command_extra"

[dependencies.path]
git = "https://gitdab.com/undefined/path"

[dependencies.mix_atom]
path = "../atom"

[dependencies.mix_id]
features = ["serde"]
path = "../id"

[dependencies.mix_shell]
path = "../shell"

[dependencies.mix_triple]
path = "../triple"

[dependencies.semver]
version = "1.0"

[dependencies.tokio]
features = ["io-util", "process", "macros", "sync"]
version = "1.12"

[dependencies.yansi]
version = "0.5" 

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.serde_yaml]
version = "0.8"

[dependencies.url]
features = ["serde"]
version = "2.2"

[dependencies.serde_json]
version = "1.0"

[dependencies.reqwest]
default-features = false
features = ["brotli", "cookies", "deflate", "gzip", "json", "multipart", "rustls-tls", "stream", "trust-dns"]
version = "0.11"

[dependencies.ubyte]
version = "0.10"
