[package]
name    = "milk_group"
version = "0.0.0"
edition = "2021"

[dependencies.milk_metadata]
path = "../metadata"

[dependencies.milk_triple]
path = "../triple"

[dependencies.path]
git = "https://gitdab.com/undefined/path"

[dependencies.percent-encoding]
version = "2.1"

[dependencies.reqwest]
default-features = false
features = ["brotli", "cookies", "deflate", "gzip", "json", "multipart", "rustls-tls", "stream", "trust-dns"]
version = "0.11"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_yaml]
version = "0.8"

[dependencies.url]
features = ["serde"]
version = "2.2"
