[package]
name    = "manifest"
version = "0.0.0"
edition = "2018"

[dependencies.atom]
features = ["serde"]
path = "../atom"

[dependencies.codespan-reporting]
version = "0.11"

[dependencies.semver]
features = ["serde"]
version = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.serde_yaml]
version = "0.8"

[dependencies.tokio]
features = ["rt"]
version = "1.12"
