[package]
name    = "mix_manifest"
version = "0.0.0"
edition = "2018"

[dependencies.codespan-reporting]
version = "0.11"

[dependencies.mix_atom]
features = ["serde"]
path = "../atom"

[dependencies.mix_source]
#features = ["serde"]
path = "../source"

[dependencies.path]
git = "https://gitdab.com/undefined/path"

[dependencies.semver]
features = ["serde"]
version = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.serde_yaml]
version = "0.8"

[dependencies.tokio]
features = ["rt"]
version = "1.12"
