[package]
name    = "milk_shell"
version = "0.0.0"
edition = "2021"

[dependencies.async-trait]
version = "0.1"

[dependencies.futures-util]
version = "0.3"

[dependencies.command_extra]
git = "https://gitdab.com/undefined/command_extra"

[dependencies.path]
git = "https://gitdab.com/undefined/path"

[dependencies.milk_atom]
path = "../atom"

[dependencies.milk_id]
path = "../id"

[dependencies.milk_triple]
path = "../triple"

[dependencies.semver]
version = "1.0"

[dependencies.tokio]
features = ["io-std", "io-util", "sync"]
version = "1.12"

[dependencies.yansi]
version = "0.5" 
