[package]
name    = "mix_sync"
version = "0.0.0"
edition = "2021"

[dependencies.futures-util]
version = "0.3"

[dependencies.command_extra]
git = "https://gitdab.com/undefined/command_extra"

[dependencies.path]
git = "https://gitdab.com/undefined/path"

[dependencies.mix_atom]
path = "../atom"

[dependencies.mix_config]
path = "../config"

[dependencies.mix_id]
path = "../id"


[dependencies.mix_shell]
path = "../shell"

[dependencies.mix_triple]
path = "../triple"

[dependencies.semver]
version = "1.0"

[dependencies.tokio]
features = ["io-util", "process", "macros", "sync"]
version = "1.12"

[dependencies.yansi]
version = "0.5" 

[dependencies.url]
features = ["serde"]
version = "2.2"
